align all text and icons in sidebar, fix paddings and margins with border

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -116,9 +116,36 @@ a {
                 margin: 0 15px;
                 border-top: 1px solid $content-bg;
                 border-bottom: 1px solid $content-bg;
+                a {
+                    padding: 0 10px;
+                }
                 .profile-picture {
-                    width: 50px;
-                    height: 50px;
+                    width: 35px;
+                    height: 35px;
+                }
+                ul {
+                    margin-top: 9px;
+                    li {
+                        a {
+                            margin-top: 10px;
+                            color: $content-bg;
+                            display: block;
+                            font-size: 12px;
+                            line-height: 30px;
+                            opacity: 0.7;
+                            i {
+                                width: 34px;
+                                text-align: center;
+                                margin-right: 10px;
+                                font-size: 1rem;
+                                line-height: 20px;
+                            }
+                            &:hover {
+                                transition: all 0.3s ease 0s;
+                                opacity: 1;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -130,15 +157,15 @@ a {
                    text-transform: uppercase;
                    font-size: 0.8rem;
                    font-weight: 600;
-                   padding: 10px 8px;
+                   padding: 10px;
                    line-height: 30px;
                    opacity: 0.7;
                    &:hover {
                        opacity: 1;
-                       transition-duration: 0.4s;
+                       transition: all 0.3s ease 0s;
                    }
                    i {
-                    font-size: 1.7rem;
+                    font-size: 1.5rem;
                     margin-right: 12px;
                     line-height: 30px;
                     width: 34px;
